Add our shorewall configurations for bootservers.

--- a/rules/bootserver_firewall/templates/etc_shorewall/shorewall.conf
+++ b/rules/bootserver_firewall/templates/etc_shorewall/shorewall.conf
@@ -1,6 +1,6 @@
 ###############################################################################
 #
-#  Shorewall Version 5 -- /etc/shorewall/shorewall.conf
+#  Shorewall Version 4 -- /etc/shorewall/shorewall.conf
 #
 #  For information about the settings in this file, type "man shorewall.conf"
 #
@@ -12,32 +12,16 @@
 STARTUP_ENABLED=Yes
 
 ###############################################################################
-#			     V E R B O S I T Y
+#		              V E R B O S I T Y
 ###############################################################################
 
 VERBOSITY=1
 
 ###############################################################################
-#			        P A G E R
+#		                L O G G I N G
 ###############################################################################
 
-PAGER=
-
-###############################################################################
-#			     F I R E W A L L
-###############################################################################
-
-FIREWALL=
-
-###############################################################################
-#			       L O G G I N G
-###############################################################################
-
-BLACKLIST_LOG_LEVEL=
-
-INVALID_LOG_LEVEL=
-
-LOG_BACKEND=
+BLACKLIST_LOGLEVEL=
 
 LOG_MARTIANS=Yes
 
@@ -55,10 +39,6 @@ LOGLIMIT=
 
 MACLIST_LOG_LEVEL=info
 
-RELATED_LOG_LEVEL=
-
-RPFILTER_LOG_LEVEL=info
-
 SFILTER_LOG_LEVEL=info
 
 SMURF_LOG_LEVEL=info
@@ -67,17 +47,11 @@ STARTUP_LOG=/var/log/shorewall-init.log
 
 TCP_FLAGS_LOG_LEVEL=info
 
-UNTRACKED_LOG_LEVEL=
-
 ###############################################################################
 #	L O C A T I O N	  O F	F I L E S   A N D   D I R E C T O R I E S
 ###############################################################################
 
-ARPTABLES=
-
-CONFIG_PATH="${CONFDIR}/shorewall:${SHAREDIR}/shorewall"
-
-GEOIPDIR=/usr/share/xt_geoip/LE
+CONFIG_PATH="/etc/shorewall:/usr/share/shorewall"
 
 IPTABLES=
 
@@ -85,11 +59,7 @@ IP=
 
 IPSET=
 
-LOCKFILE=
-
 MODULESDIR=
-
-NFACCT=
 
 PATH="/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin:/usr/local/sbin"
 
@@ -114,7 +84,7 @@ QUEUE_DEFAULT=none
 REJECT_DEFAULT=Reject
 
 ###############################################################################
-#			 R S H / R C P	C O M M A N D S
+#                        R S H / R C P  C O M M A N D S
 ###############################################################################
 
 RCP_COMMAND='scp ${files} ${root}@${system}:${destination}'
@@ -134,17 +104,11 @@ ADD_SNAT_ALIASES=No
 
 ADMINISABSENTMINDED=Yes
 
-AUTOCOMMENT=Yes
-
-AUTOHELPERS=Yes
+AUTO_COMMENT=Yes
 
 AUTOMAKE=No
 
-BASIC_FILTERS=No
-
-BLACKLIST="NEW,INVALID,UNTRACKED"
-
-CHAIN_SCRIPTS=Yes
+BLACKLISTNEWONLY=Yes
 
 CLAMPMSS=No
 
@@ -152,15 +116,11 @@ CLEAR_TC=Yes
 
 COMPLETE=No
 
-DEFER_DNS_RESOLUTION=Yes
-
 DELETE_THEN_ADD=Yes
 
 DETECT_DNAT_IPADDRS=No
 
 DISABLE_IPV6=No
-
-DOCKER=No
 
 DONT_LOAD=
 
@@ -174,21 +134,15 @@ FASTACCEPT=No
 
 FORWARD_CLEAR_MARK=
 
-HELPERS=
-
-IGNOREUNKNOWNVARIABLES=No
-
 IMPLICIT_CONTINUE=No
 
-INLINE_MATCHES=No
-
-IPSET_WARNINGS=Yes
-
-IP_FORWARDING=Keep
+IP_FORWARDING=On
 
 KEEP_RT_TABLES=No
 
-LOAD_HELPERS_ONLY=Yes
+LEGACY_FASTSTART=Yes
+
+LOAD_HELPERS_ONLY=No
 
 MACLIST_TABLE=filter
 
@@ -199,8 +153,6 @@ MANGLE_ENABLED=Yes
 MAPOLDACTIONS=No
 
 MARK_IN_FORWARD_CHAIN=No
-
-MINIUPNPD=No
 
 MODULE_SUFFIX=ko
 
@@ -214,21 +166,13 @@ OPTIMIZE=0
 
 OPTIMIZE_ACCOUNTING=No
 
-REJECT_ACTION=
-
 REQUIRE_INTERFACE=No
 
-RESTART=restart
-
 RESTORE_DEFAULT_ROUTE=Yes
-
-RESTORE_ROUTEMARKS=Yes
 
 RETAIN_ALIASES=No
 
 ROUTE_FILTER=Yes
-
-SAVE_ARPTABLES=No
 
 SAVE_IPSETS=No
 
@@ -240,23 +184,9 @@ TC_PRIOMAP="2 3 3 3 2 3 1 1 2 2 2 2 2 2 2 2"
 
 TRACK_PROVIDERS=No
 
-TRACK_RULES=No
+USE_DEFAULT_RT=No
 
-USE_DEFAULT_RT=Yes
-
-USE_PHYSICAL_NAMES=No
-
-USE_RT_NAMES=No
-
-VERBOSE_MESSAGES=Yes
-
-WARNOLDCAPVERSION=Yes
-
-WORKAROUNDS=No
-
-ZERO_MARKS=No
-
-ZONE2ZONE=-
+ZONE2ZONE=2
 
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
@@ -264,21 +194,13 @@ ZONE2ZONE=-
 
 BLACKLIST_DISPOSITION=DROP
 
-INVALID_DISPOSITION=CONTINUE
-
 MACLIST_DISPOSITION=REJECT
-
-RELATED_DISPOSITION=ACCEPT
-
-RPFILTER_DISPOSITION=DROP
 
 SMURF_DISPOSITION=DROP
 
 SFILTER_DISPOSITION=DROP
 
 TCP_FLAGS_DISPOSITION=DROP
-
-UNTRACKED_DISPOSITION=CONTINUE
 
 ################################################################################
 #			P A C K E T  M A R K  L A Y O U T
@@ -293,3 +215,10 @@ PROVIDER_OFFSET=
 MASK_BITS=
 
 ZONE_BITS=0
+
+################################################################################
+#                            L E G A C Y  O P T I O N
+#                      D O  N O T  D E L E T E  O R  A L T E R
+################################################################################
+
+IPSECFILE=zones
