Our default images-directory-path is now "/images".

--- a/parts/ltsp/bootserver/installer/preseed/puavo-bootserver-3000G-SWRAID-1.cfg
+++ b/parts/ltsp/bootserver/installer/preseed/puavo-bootserver-3000G-SWRAID-1.cfg
@@ -68,7 +68,7 @@ d-i partman-auto/expert_recipe string \
             format{ }                 \
             use_filesystem{ }         \
             filesystem{ ext4 }        \
-            mountpoint{ /opt/ltsp/images } \
+            mountpoint{ /images }     \
         .                             \
         100000 40 100000000 ext4      \
             $defaultignore{ }         \
