Install Teddy Bear (customised version of Snap4Arduino).

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -40,6 +40,7 @@ packagedirs += vstloggerpro/
 
 # opinsys-os specific
 packagedirs += ekapeli/
+packagedirs += teddybear/
 
 packagefiles = $(packagedirs:%/=%.tar.gz)
 
