Change the Teddy Bear ID for Webmenu

--- a/rules/webmenu/templates/desktop.d/default-overrides.yaml
+++ b/rules/webmenu/templates/desktop.d/default-overrides.yaml
@@ -11,7 +11,7 @@ Open-Board:
     fi: Open-Board-älytauluohjelmisto
     sv: Open-Board
     de: Open-Board
-Snap4Arduino:
+teddybear:
   name:
     en: Teddy Bear programming
     fi: Nalle-ohjelmointi
