Change all Snap4Arduino references to Teddy Bear

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -165,7 +165,7 @@ items:
     inactiveByDeviceType: thinclient
   - source: fritzing
     type: desktop
-  - source: Snap4Arduino
+  - source: teddybear
     type: desktop
     inactiveByDeviceType: thinclient
   - source: drracket
