--- a/rules/webmenu/templates/tab.d/ops.yaml
+++ b/rules/webmenu/templates/tab.d/ops.yaml
@@ -99,7 +99,7 @@ items:
     - type: desktop
       source: gnome-calculator
     - type: desktop
-      source: Snap4Arduino
+      source: teddybear
       inactiveByDeviceType: thinclient
     - type: desktop
       source: scratch
@@ -554,7 +554,7 @@ items:
       source: arduino
       inactiveByDeviceType: thinclient
     - type: desktop
-      source: Snap4Arduino
+      source: teddybear
     - type: desktop
       source: libreoffice-writer
     - type: web
