"iceweasel" --> "firefox" in webmenu menu configuration.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -111,7 +111,7 @@ items:
     de: Interent Programme
   osIcon: applications-internet
   items:
-  - source: iceweasel
+  - source: firefox
     type: desktop
     name: Firefox
   - source: chromium
