--- a/rules/puavo_sysinfo_collector/files/puavo-sysinfo-collector.service
+++ b/rules/puavo_sysinfo_collector/files/puavo-sysinfo-collector.service
@@ -1,11 +1,15 @@
+# System information collector DBus service
+# Used in the login screen
+
 [Unit]
-Description=Collect system information for the login screen
+Description=Collect system info for the login screen
 After=network-online.target
 Before=gdm.service
 
 [Service]
+Type=dbus
+BusName=org.puavo.client.systeminfocollectordaemon
 ExecStart=/usr/sbin/puavo-sysinfo-collector
-Type=oneshot
 
 [Install]
 WantedBy=multi-user.target
