Fix Arduino icon.

--- a/rules/webmenu/templates/desktop.d/default-overrides.yaml
+++ b/rules/webmenu/templates/desktop.d/default-overrides.yaml
@@ -27,6 +27,7 @@ anki:
 arduino:
   name:
     en: Arduino IDE
+  osIcon: /opt/arduino-ide/lib/icons/96x96/apps/arduino.png  
 audacity:
   name:
     en: Audacity-audio editor
