--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -28,6 +28,7 @@ packagedirs += google-earth/
 packagedirs += idid/
 packagedirs += marvinsketch/
 packagedirs += mattermost-desktop/
+packagedirs += mimio-studio/
 packagedirs += msttcorefonts/
 packagedirs += obsidian-icons/
 packagedirs += ohjelmointi-opetuksessa/
