--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -339,6 +339,16 @@ Description: Bits and pieces needed inside the LTSP chroot image.
  Bits and pieces needed inside the LTSP chroot image.
  .
 
+Package: puavomenu
+Architecture: all
+Depends: ${misc:Depends},
+ python3,
+ python3-yaml,
+ python3-xlib
+Description: PuavoMenu is a desktop menu for starting up programs.
+ PuavoMenu is a desktop menu for starting up programs
+ .
+
 Package: puavo-pam
 Architecture: all
 Depends: ${misc:Depends}, libpam0g
