PuavoMenu: fix a typo

--- a/rules/puavomenu/templates/menudata.yaml
+++ b/rules/puavomenu/templates/menudata.yaml
@@ -466,7 +466,7 @@ programs:
             en: Stellarium-planetarium
             fi: Stellarium-planetaario
             sv: Stellarium-planetarium
-            de: Stellaruim-Planetarium
+            de: Stellarium-Planetarium
   - sumopaint:
         type: web
         name: Sumopaint
