Install "python-serial" package for jetpipe.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -302,6 +302,7 @@ Depends: ${misc:Depends},
  python,
  python-appindicator,
  python-gtk2,
+ python-serial,
  ruby-dnsruby,
  ruby-json,
  ruby-ldap,
