If a host is personally administered but the primary user is not set, make the next user the primary user (and he/she becomes the only one who can log in to the host).

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -132,6 +132,7 @@ install : installdirs
 		pam/puavo-login \
 		pam/puavo-manage-homedir \
 		pam/puavo-nodm-pam-setup \
+		pam/puavo-setup-primary-user \
 		pam/restrict-logins-if-personally-administered
 
 	$(INSTALL_DATA) -t $(DESTDIR)/lib/systemd/system \
