Add system-config-printer package as Gnome UI for adding printers is not sufficient.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -42,6 +42,7 @@ items:
     type: desktop
   - source: system-config-printer
     type: desktop
+    osIconPath: /usr/share/icons/Faenza/devices/64/printer.png
   - source: vino-preferences
     type: desktop
   - source: org.gnome.Screenshot
