Add Geogebra 6 to the subjects menu.

--- a/rules/webmenu/templates/tab.d/ops.yaml
+++ b/rules/webmenu/templates/tab.d/ops.yaml
@@ -89,6 +89,8 @@ items:
       source: kbruch
     - type: desktop
       source: geogebra
+    - source: geogebra6
+      type: desktop
     - source: org.kde.kmplot
       type: desktop
       name:
