"puavolocaladmins"-group is no more, remove it from cupsd.conf.

--- a/rules/cups/files/cupsd.conf
+++ b/rules/cups/files/cupsd.conf
@@ -45,14 +45,14 @@ WebInterface Yes
 # Restrict access to configuration files...
 <Location /admin/conf>
   AuthType Default
-  Require user @SYSTEM @puavolocaladmins
+  Require user @SYSTEM
   Order allow,deny
 </Location>
 
 # Restrict access to log files...
 <Location /admin/log>
   AuthType Default
-  Require user @SYSTEM @puavolocaladmins
+  Require user @SYSTEM
   Order allow,deny
 </Location>
 
