--- a/parts/ltsp/puavo-install/dbus-1/org.puavo.client.conf
+++ b/parts/ltsp/puavo-install/dbus-1/org.puavo.client.conf
@@ -6,7 +6,7 @@
                 <allow own="org.puavo.client.Daemon"/>
                 <allow send_destination="org.puavo.client.Daemon"/>
         </policy>
-        <policy group="puavolocaladmins">
+        <policy group="puavodesktop">
                 <allow send_destination="org.puavo.client.Daemon"/>
         </policy>
 </busconfig>
