Startup puavo-client-updater-applet selectively, depending on if we are in login screen, and on desktop session if host is personally administered and user is primary user.  In most logins we do not need to start it up, possibly making desktop session setup a bit faster.

--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -41,7 +41,8 @@ installdirs :
 .PHONY : install
 install : installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) \
-		puavo-client-updater-applet
+		puavo-client-updater-applet       \
+		puavo-client-updater-applet.py
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-client-daemon \
