Create /var/lib/puavo which is needed by puavo-bootserver-sync-images and /etc/puavo-conf/script/setup_state_partition fails without it.

--- a/parts/ltsp/bootserver/Makefile
+++ b/parts/ltsp/bootserver/Makefile
@@ -30,6 +30,7 @@ installdirs :
 	mkdir -p $(DESTDIR)$(templatedir)/etc/pam.d
 	mkdir -p $(DESTDIR)$(templatedir)/var/lib/bind
 	mkdir -p $(DESTDIR)$(libdir)/puavo-ltsp-bootserver
+	mkdir -p $(DESTDIR)/var/lib/puavo
 
 .PHONY : install
 install : installdirs
