--- a/parts/sharedir/Makefile
+++ b/parts/sharedir/Makefile
@@ -1,3 +1,9 @@
+prefix = /usr/local
+datarootdir = $(prefix)/share
+
+INSTALL = install
+INSTALL_DATA = $(INSTALL) -m 644
+
 subdirs = client manager
 install-subdirs = $(subdirs:%=install-%)
 clean-subdirs = $(subdirs:%=clean-%)
@@ -13,8 +19,14 @@ $(subdirs) :
 $(install-subdirs) :
 	$(MAKE) -C $(@:install-%=%) install
 
+.PHONY : installdirs
+installdirs : $(install-subdirs)
+	mkdir -p $(DESKTOP)$(datarootdir)/puavo-conf/definitions
+
 .PHONY : install
 install : $(install-subdirs)
+	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-conf/definitions \
+		puavo-sharedir.json
 
 .PHONY : $(clean-subdirs)
 $(clean-subdirs) :
