--- a/parts/sharedir/manager/Makefile
+++ b/parts/sharedir/manager/Makefile
@@ -3,6 +3,7 @@ exec_prefix = $(prefix)
 sbindir     = $(exec_prefix)/sbin
 
 INSTALL         = install
+INSTALL_DATA    = $(INSTALL) -m 644
 INSTALL_PROGRAM = $(INSTALL)
 
 # For some reason ruby lib directory is different under /usr and /usr/local
@@ -17,9 +18,15 @@ all:
 install-dirs:
 	mkdir -p $(DESTDIR)$(RUBY_LIB_DIR)
 	mkdir -p $(DESTDIR)$(sbindir)
+	mkdir -p $(DESTDIR)$(sysconfdir)/systemd/system/multi-user.target.wants
+	mkdir -p $(DESTDIR)/lib/systemd/system
 
 install: install-dirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) bin/puavo-sharedir-manager
 	cp -R lib/* $(DESTDIR)$(RUBY_LIB_DIR)
+	$(INSTALL_DATA) -t $(DESTDIR)/lib/systemd/system \
+		systemd/*
+	ln -fs -t $(DESTDIR)$(sysconfdir)/systemd/system/multi-user.target.wants\
+		/lib/systemd/system/puavo-sharedir-manager.service
 
 clean:
