Build krb5 and openldap packages to the device image as well, because we are using these on bootservers.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -10,10 +10,12 @@ _pkgs_ports     := autopoweroff    \
                    gnome-shell     \
                    grub2           \
                    gvfs            \
+                   krb5            \
                    linux           \
                    mutter          \
                    nwjs            \
                    openboard       \
+                   openldap        \
                    visionmedia-mon \
                    vtun            \
                    wine            \
