Make smbd also wait for slapd (like krb5-kdc currently does).

--- a/rules/bootserver_samba/files/smbd_override.conf
+++ b/rules/bootserver_samba/files/smbd_override.conf
@@ -1,5 +1,5 @@
 [Unit]
-After=slapd.service
+After=network.target nmbd.service slapd.service winbind.service
 
 [Service]
 # slapd may not be properly up immediately... so wait a bit.
