--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "puavo_conf": {
+    "puavo.admin.backup.authorized_hosts": "",
+    "puavo.admin.backup.authorized_ssh_pubkey": "",
     "puavo.support.image_changelog_url": "",
     "puavo.support.new_bugreport_url": "",
     "puavo.vpn.client.remote_servers": "",
