Add a new suggestion for setting custom puavo-conf value, "puavo.admin.vpn.subnet".

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "puavo_conf": {
     "puavo.admin.backup.authorized_hosts": "",
     "puavo.admin.backup.authorized_ssh_pubkey": "",
+    "puavo.admin.vpn.subnet": "",
     "puavo.support.image_changelog_url": "",
     "puavo.support.new_bugreport_url": "",
     "puavo.vpn.client.remote_servers": "",
