--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "puavo.admin.backup.authorized_hosts": "",
     "puavo.admin.backup.authorized_ssh_pubkey": "",
     "puavo.admin.vpn.subnet": "",
+    "puavo.monitoring.nagios.allowed_hosts": "127.0.0.1",
     "puavo.support.image_changelog_url": "",
     "puavo.support.new_bugreport_url": "",
     "puavo.vpn.client.remote_servers": "",
