--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "puavo.boot.plymouth.theme": "opinsys",
     "puavo.desktop.vendor.logo": "/usr/share/opinsys-art/logo.png",
     "puavo.greeter.logo": "/usr/share/opinsys-art/opinsys-support-info-fi.png",
+    "puavo.monitoring.nagios.allowed_hosts": "127.0.0.1,10.246.133.132",
     "puavo.support.image_changelog_url": "http://changelog.opinsys.fi/%%IMAGESERIES%%/#%%IMAGEVERSION%%",
     "puavo.support.new_bugreport_url": "https://support.opinsys.fi/new",
     "puavo.vpn.client.remote_servers": "217.112.254.9|443|tcp 217.112.254.10|443|tcp",
