Check the latest default munin-node.conf from Debian packages so that we have only minimal changes to our configuration.

--- a/rules/bootserver_munin/files/munin-node.conf
+++ b/rules/bootserver_munin/files/munin-node.conf
@@ -12,10 +12,18 @@ setsid 1
 user root
 group root
 
-# Regexps for files to ignore
+# This is the timeout for the whole transaction.
+# Units are in sec. Default is 15 min
+#
+# global_timeout 900
 
-ignore_file ~$
-#ignore_file [#~]$  # FIX doesn't work. '#' starts a comment
+# This is the timeout for each plugin.
+# Units are in sec. Default is 1 min
+#
+# timeout 60
+
+# Regexps for files to ignore
+ignore_file [\#~]$
 ignore_file DEADJOE$
 ignore_file \.bak$
 ignore_file %$
@@ -34,6 +42,7 @@ ignore_file \.pod$
 # may repeat the allow line as many times as you'd like
 
 allow ^127\.0\.0\.1$
+allow ^::1$
 
 # If you have installed the Net::CIDR perl module, you can use one or more
 # cidr_allow and cidr_deny address/mask patterns.  A connecting client must
@@ -52,4 +61,3 @@ host 127.0.0.1
 
 # And which port
 port 4949
-
