--- a/parts/wlan/controller/systemd/puavo-wlancontroller.service
+++ b/parts/wlan/controller/systemd/puavo-wlancontroller.service
@@ -6,7 +6,7 @@ Wants=network.target
 [Service]
 Environment=LC_ALL=en_US.UTF-8 PUAVO_WLANCONTROLLER_DB_SQLITE3=/var/opt/puavo-wlancontroller/db.sqlite3 RACK_ENV=production
 WorkingDirectory=/opt/puavo-wlancontroller
-ExecStart=puma --workers 2 --port 45046
+ExecStart=/usr/bin/puma --workers 2 --port 45046
 User=puavo-wlancontroller
 Group=puavo-wlancontroller
 
