--- a/rules/puavomenu/templates/conditions.yaml
+++ b/rules/puavomenu/templates/conditions.yaml
@@ -3,11 +3,11 @@
 # TODO: actually determine the values for these
 
 - name: personally_administered
-  method: constant
+  function: constant
   params:
       - value: false
 
 - name: ti_nspire_cx_cas
-  method: constant
+  function: constant
   params:
       - value: true
