Fix read-write access to persistent filesystem when booting to DigabiOS/Abitti-environment.

--- a/parts/core/Makefile
+++ b/parts/core/Makefile
@@ -40,7 +40,8 @@ install : installdirs
 	$(INSTALL_PROGRAM) \
 		-t $(DESTDIR)$(datarootdir)/initramfs-tools/scripts/puavo-postmount \
 		initramfs-tools/scripts/puavo-postmount/01-mount \
-		initramfs-tools/scripts/puavo-postmount/02-plymouth
+		initramfs-tools/scripts/puavo-postmount/02-plymouth \
+		initramfs-tools/scripts/puavo-postmount/03-abitti
 	$(INSTALL_PROGRAM) -t $(DESTDIR)/sbin init-puavo
 
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/initramfs-tools/conf.d \
