Change our default plymouth theme to "opinsys-dark".

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "puavo_conf": {
-    "puavo.boot.plymouth.theme": "opinsys",
+    "puavo.boot.plymouth.theme": "opinsys-dark",
     "puavo.desktop.vendor.logo": "/usr/share/opinsys-art/logo.png",
     "puavo.greeter.logo": "/usr/share/opinsys-art/opinsys-support-info-fi.png",
     "puavo.support.image_changelog_url": "http://changelog.opinsys.fi/%%IMAGESERIES%%/#%%IMAGEVERSION%%",
