On puavomenu, implement "webwindow"-functionality with chromium.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -343,6 +343,7 @@ Description: Bits and pieces needed inside the LTSP chroot image.
 Package: puavomenu
 Architecture: all
 Depends: ${misc:Depends},
+ chromium,
  python3,
  python3-yaml,
  python3-xlib
