Add "School User List"-functionality to webmenu, for listing other users in user's school (if you are a teacher, admin or staff member).

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -663,3 +663,12 @@ items:
 - source: org.gnome.Nautilus
   type: desktop
   osIconPath: /usr/share/icons/Faenza/places/96/folder_home.png
+- type: web
+  name:
+    fi: Koulun käyttäjälista
+    sv: Skolan användarlista
+    en: School User List
+    de: Schulbenutzerliste
+  osIconPath: /usr/share/icons/Faenza/mimetypes/96/x-office-spreadsheet.png
+  url: https://api.opinsys.fi/v3/my_school_users
+  condition: "env.PUAVO_WEBMENU_SHOW_MY_SCHOOL_USERS"
